k8s/manifiests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abhishek-joshi-flask-app
  labels:
    app: abhishek-joshi-flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: abhishek-joshi-flask-app
  template:
    metadata:
      labels:
        app: abhishek-joshi-flask-app
    spec:
      containers:
      - name: flask-app
        image:  abhishek2691999/abhishek-flask-app:latest
        ports:
        - containerPort: 80
